fixed confirm modal footer buttons, they link and are visible on mobile

--- a/src/css/index.styl
+++ b/src/css/index.styl
@@ -1,6 +1,8 @@
 body {
   font-family: 'Caveat', cursive;
   background-color: #fffcf2;
+ /* color: white;
+  background-color: #3d3b30;*/
   display: flex;
   min-height: 100vh;
   flex-direction: column;
